[tool.poetry]
name = "sample-folio-data"
version = "0.1.0"
description = "Get random samples of FOLIO data"
authors = ["Shelley Doljack <sdoljack@stanford.edu>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.2"
folioclient = "^0.60.5"
black = "~24.3.0"
flake8 = "^6.0.0"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
explicit_package_bases = true
warn_unreachable = true
pretty = true
show_error_context = true